--- a/gb/22/10/8/n13841389.md
+++ b/gb/22/10/8/n13841389.md
@@ -1,66 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>柯锦中妆佛艺术创作 大墩文化中心开展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841392-579146-600x400.jpg" />
 <h6>柯锦中作品-原木色漆线安金彩绘系列〈关圣帝君像〉。（大墩文化中心提供）
 </h6>
 <hr>
-<p>【大纪元2022年10月08日讯】（大纪元记者邓玫玲台湾台中报导）台中市<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%A2%A9%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83.md#1">大墩文化中心</a>自10月8日起至10月26日推出以工艺为主题的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A6%86%E4%BD%9B.md#1">妆佛</a>～神韵巧艺柯锦中创作展”。柯锦中的展品独树一格、漆线画龙点睛，展览一大亮点为配祀神将系列，包括风雨雷电四象神、风调雨顺四大天王、周仓、关平、十二婆姐、关圣帝君及天上圣母等七十多件作品，欢迎民众前往一窥博大精深的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A6%86%E4%BD%9B%E5%B7%A5%E8%89%BA.md#1">妆佛工艺</a>。</p>
-<figure id="attachment_13841391" aria-describedby="caption-attachment-13841391" style="width: 449px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841391-579145.jpg"><img class=" wp-image-13841391" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841391-579145-600x846.jpg" alt="" width="449" b="633" /></a><figcaption id="caption-attachment-13841391" class="wp-caption-text">柯锦中于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%A2%A9%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83.md#1">大墩文化中心</a>，展出“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A6%86%E4%BD%9B.md#1">妆佛</a>～神韵巧艺柯锦中创作展”作品，在人物雕刻上皆融入传统文化的精神与寓意。（大墩文化中心提供）</figcaption></figure>
-<p>日前文化局副局长曾能汀出席开幕式时表示，柯锦中的作品以泉州派妆佛为基底，把传统佛神像金身以华而不俗显现神佛的威仪，更以原木色系为底搭配精致细腻的漆，呈现有别于传统佛神像的框架，更显工艺技术的高超境界。这次展览作品从传统到创新，将<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A6%86%E4%BD%9B%E5%B7%A5%E8%89%BA.md#1">妆佛工艺</a>演变完整呈现，包括从原木肌理雕刻的现代作品、原木素身雕刻的佛像、原木色漆线安金、原木色漆线裸线作品、传统安金彩绘神像、及漆线竹茶器、陶艺浮雕茶仓，完整呈现柯锦中四十年来的工艺技术和创作。</p>
-<figure id="attachment_13841393" aria-describedby="caption-attachment-13841393" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841393-579147.jpg"><img class=" wp-image-13841393" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841393-579147-600x600.jpg" alt="" width="452" b="452" /></a><figcaption id="caption-attachment-13841393" class="wp-caption-text">柯锦中作品-传统彩绘安金系列〈十二婆姐：监生婆姐阮三娘〉。（大墩文化中心提供）</figcaption></figure>
-<p>文化局则表示，柯锦中民国54年(1965)出生于彰化县和美镇，父亲是位木工师傅，成长在木材、神佛及民俗工艺环绕的环境，与艺术结下深厚的因缘。13岁时向“显明佛店”黄必昇师傅学习妆佛；16岁出师后，开启了一生的妆佛<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%A8%E9%9B%95.md#1">木雕</a>之路；17岁自立门户，半工半读，以工养艺训练雕工，快速地在木雕界闯出一片天，并于2011年获得大墩工艺师及2012年入选文化部台湾工艺之家。</p>
+<p>【大纪元2022年10月08日讯】（大纪元记者邓玫玲台湾台中报导）台中市大墩文化中心自10月8日起至10月26日推出以工艺为主题的“妆佛～神韵巧艺柯锦中创作展”。柯锦中的展品独树一格、漆线画龙点睛，展览一大亮点为配祀神将系列，包括风雨雷电四象神、风调雨顺四大天王、周仓、关平、十二婆姐、关圣帝君及天上圣母等七十多件作品，欢迎民众前往一窥博大精深的妆佛工艺。</p>
+<figure id="attachment_13841391" aria-describedby="caption-attachment-13841391" style="width: 449px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841391-579145.jpg"><img loading="lazy" decoding="async" class=" wp-image-13841391" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841391-579145-600x846.jpg" alt="" width="449" b="633" /></a><figcaption id="caption-attachment-13841391" class="wp-caption-text">柯锦中于大墩文化中心，展出“妆佛～神韵巧艺柯锦中创作展”作品，在人物雕刻上皆融入传统文化的精神与寓意。（大墩文化中心提供）</figcaption></figure>
+<p>日前文化局副局长曾能汀出席开幕式时表示，柯锦中的作品以泉州派妆佛为基底，把传统佛神像金身以华而不俗显现神佛的威仪，更以原木色系为底搭配精致细腻的漆，呈现有别于传统佛神像的框架，更显工艺技术的高超境界。这次展览作品从传统到创新，将妆佛工艺演变完整呈现，包括从原木肌理雕刻的现代作品、原木素身雕刻的佛像、原木色漆线安金、原木色漆线裸线作品、传统安金彩绘神像、及漆线竹茶器、陶艺浮雕茶仓，完整呈现柯锦中四十年来的工艺技术和创作。</p>
+<figure id="attachment_13841393" aria-describedby="caption-attachment-13841393" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841393-579147.jpg"><img loading="lazy" decoding="async" class=" wp-image-13841393" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841393-579147-600x600.jpg" alt="" width="452" b="452" /></a><figcaption id="caption-attachment-13841393" class="wp-caption-text">柯锦中作品-传统彩绘安金系列〈十二婆姐：监生婆姐阮三娘〉。（大墩文化中心提供）</figcaption></figure>
+<p>文化局则表示，柯锦中民国54年(1965)出生于彰化县和美镇，父亲是位木工师傅，成长在木材、神佛及民俗工艺环绕的环境，与艺术结下深厚的因缘。13岁时向“显明佛店”黄必昇师傅学习妆佛；16岁出师后，开启了一生的妆佛木雕之路；17岁自立门户，半工半读，以工养艺训练雕工，快速地在木雕界闯出一片天，并于2011年获得大墩工艺师及2012年入选文化部台湾工艺之家。</p>
 <p>谈及展览亮点，柯锦中认为，这次展出作品在人物雕刻上融入传统文化的精神与寓意，如十二婆姐系列，需一次同时设计12件，每件作品中都富有母爱光辉和母仪的庄严，并具有照护、关爱孩童的婆婆妈妈形态，同时衣服和外皮需展现出婆姐和小孩之间的情感互动，面容表情和衣饰纹路都需费心设计。</p>
-<figure id="attachment_13841390" aria-describedby="caption-attachment-13841390" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841390-579144.jpg"><img class=" wp-image-13841390" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841390-579144-600x600.jpg" alt="" width="451" b="451" /></a><figcaption id="caption-attachment-13841390" class="wp-caption-text">柯锦中2022年新作-现代艺术雕刻系列〈招财虎〉。（大墩文化中心提供）</figcaption></figure>
+<figure id="attachment_13841390" aria-describedby="caption-attachment-13841390" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13841390-579144.jpg"><img loading="lazy" decoding="async" class=" wp-image-13841390" src="https://i.epochtimes.com/assets/uploads/2022/10/id13841390-579144-600x600.jpg" alt="" width="451" b="451" /></a><figcaption id="caption-attachment-13841390" class="wp-caption-text">柯锦中2022年新作-现代艺术雕刻系列〈招财虎〉。（大墩文化中心提供）</figcaption></figure>
 <p>柯锦中表示，妆佛工艺之美在于五官的表现，小孩五官显露稚气童真，文面五官表现精巧之气，女相五官展现母慈腼腆之像，武生五官尽显正气威仪，武将五官散发威而不怒及刚正之气。身为第一位以妆佛工艺获得认证的大墩工艺师，柯锦中说，“这次邀请展用3年时间准备三十余件新作品，获邀于中部地区参观人数最多的大墩文化中心展出，倍感荣幸，希望对妆佛艺术有兴趣的民众来观看。”更多展览详情可至官网(www.dadun.culture.taichung.gov.tw)查询。</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/28/n13678162.md#1">三义木雕馆   清明连假开馆及优惠讯息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/5/n13752664.md#1">动手吧陶器木雕联展 承传原民多元创作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/6/n13774631.md#1">神韵演出抚慰人心 木雕艺术家钦佩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/22/n13786987.md#1">亚洲青年木雕研习营 副县长惊艳三代同堂传承技艺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/5/n13796255.md#1">国际木雕艺术交流展博物馆开幕 公布国际木雕竞赛入围名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/25/n13809896.md#1">化腐朽为神奇 台湾女婿马爹木雕个展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/29/n13835068.md#1">木雕艺师黄纱荣 荣获全球中华文化艺术薪传奖殊荣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/22/n14001702.md#1">谷仓到画廊 中市为“艺术新秀”发声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000242.md#1">洗肾人生30年 居家透析找回生活品质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000206.md#1">四百年德国名瓷特展 工艺大师与台藏家会面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/28/n13678162.md#1">三义木雕馆   清明连假开馆及优惠讯息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/5/n13752664.md#1">动手吧陶器木雕联展 承传原民多元创作</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/6/n13774631.md#1">神韵演出抚慰人心 木雕艺术家钦佩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/22/n13786987.md#1">亚洲青年木雕研习营 副县长惊艳三代同堂传承技艺</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/5/n13796255.md#1">国际木雕艺术交流展博物馆开幕 公布国际木雕竞赛入围名单</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/25/n13809896.md#1">化腐朽为神奇 台湾女婿马爹木雕个展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/29/n13835068.md#1">木雕艺师黄纱荣 荣获全球中华文化艺术薪传奖殊荣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310387.md#1">土银羽球营赞助家扶 奥运金牌王齐麟轰动开幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310350.md#1">台版柬埔寨案打死“猪仔” 4恶上诉二审遭驳回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310308.md#1">餐厅开趴放彩烟恐“尘暴”？ 中市环保局开罚</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/20/n10319814.md#1" target="_blank">裴毅然：重庆谈判真相——破裂主责在“共”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/21/n14001139.md#1">美国“溺毙”女子被天使告知：你太早来了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998906.md#1">【未解之谜】杨贵妃生死之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993884.md#1">大唐传奇公主 聚众美于一身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997107.md#1">消灾避祸，古人都做这件事！学会就什么都不怕了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/14/n13996302.md#1">震惊伪帝刘豫的轮回事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000734.md#1">【时事军事】乌防空部队成功 只是幸运吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000964.md#1">【财商天下】时间金钱省到极致 “旅游特种兵”爆红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001061.md#1">【新闻看点】药明康德赵宁早逝 牵出背后黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000957.md#1">G7公报罕见提九点一致意见 明确对华立场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000885.md#1">中亚峰会vsG7峰会 网民围观感叹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001009.md#1">分析：接班人困境是习近平躲不过的难题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000491.md#1">蔡少芬晒全家福为张晋庆生 夫妻互动超有趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000548.md#1">疑因挺白纸运动遭报复 周峻纬主演新剧突撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000318.md#1">海莉·贝莉当《小美人鱼》引热议 导演谈选角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000586.md#1">在摩纳哥海边跑步 关晓彤获赞“好自律”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000660.md#1">影帝丹佐·华盛顿回忆起他当垃圾工人的时光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001022.md#1">吃对可逆龄 女性必吃6种养气血食物 5种可天天吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n13999962.md#1">癌细胞被饿死 他断食抗癌成功 但这类人不适用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997442.md#1">比降糖药效果更好？摄入两类纤维 血糖1个月降25%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999487.md#1">这些过期的东西不要再留了 居家整理更轻松</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000216.md#1">欧洲最长冰路速限奇特 而且禁止系安全带</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/8/n13841389.htm">柯锦中妆佛艺术创作 大墩文化中心开展</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/8/n13841389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/8/n13841389.htm">柯锦中妆佛艺术创作 大墩文化中心开展</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/8/n13841389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
