--- a/gb/24/8/10/n14308673.md
+++ b/gb/24/8/10/n14308673.md
@@ -138,7 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307761.md#1">奥运台湾代表团拜会巴黎勒瓦卢瓦市府</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/23/n11276054.md#1" target="_blank">金言：蒋介石当年在江西的惊人预言</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
